--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity": "^3.229.0",
+    "@aws-sdk/client-s3": "^3.229.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.229.0",
     "@prisma/client": "^4.5.0",
+    "@toast-ui/editor-plugin-code-syntax-highlight": "^3.1.0",
+    "@toast-ui/react-editor": "^3.2.2",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "github-markdown-css": "^5.1.0",
     "next": "13.0.6",
+    "next-auth": "^4.18.6",
+    "prism-themes": "^1.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
